[package]
name = "conflict"
version = "0.2.0"
edition = "2024"
authors = ["Paul Pare <paulpare@protonmail.com>"]
description = "A CLI tool that detects cargo dependency conflicts."
repository = "https://github.com/Sheape/conflict"
documentation = "https://docs.rs/conflict"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 }

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
guppy = "0.17.24"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = "4.2.3"
semver = "1.0.27"
serde = "1.0.228"
termtree = "0.5.1"
thiserror = "2.0.17"
toml = "0.9.10"
toml_edit = "0.24.0"
